# Las_Flask

./: .dockerignore  .gitignore  02_[169]_К1А-723.las  Dockerfile  Dockerfile.dev  GZ6.LAS  KS.LAS  Makefile  Test_1.py  Test_2.py  Test_3.py  app.py  app_2.py  docker-compose.dev.yml  docker-compose.yml  instance  network_test.py  nginx.conf  prepare-lascheck.sh  pyproject.toml  requirements.txt  setup.sh  test_performance.py  скв_61_Мастерьельское_инт_л_3070_20_3404_94_md.las
lascheck/: setup.py 
lascheck/lascheck/: las.py  las_items.py  reader.py  spec.py  tr.py
static/: manifest.json  sw.js
static/css/: styles.css
static/js/: scripts.js  setupDragAndDrop.js  validator.js
templates/: index.html  index_2.html  index_3.html
