[tool.poetry]
name = "las-validator-app"
version = "0.1.0"
description = "Professional LAS file validator with Flask web interface"
authors = ["НТУ АСОИГИС <your-email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
gunicorn = "^21.2.0"
werkzeug = "^3.1.3"
jinja2 = "^3.1.6"
markupsafe = "^3.0.2"
click = "^8.2.1"
blinker = "^1.9.0"
itsdangerous = "^2.2.0"
# Local lascheck package - based on your poetry.lock, it's in ../lascheck-master
# But for Docker, we need it to be ./lascheck, so copy it there
lascheck = {path = "./lascheck", develop = true, optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true