[project]
name = "test-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "Amir"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "debugpy (>=1.8.16,<2.0.0)",
    "lascheck @ file:///home/amir/Projects/Las_Flask/lascheck",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "greenlet (>=2.0.3)",
    "eventlet (>=0.40.3,<0.41.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
